@@ -31,13 +31,13 @@ $(DNSMASQ_DIR)/$(DNSMASQ_TARGET_BINARY): $(DNSMASQ_DIR)/.unpacked
 		-C $(DNSMASQ_DIR)
 
 $(PACKAGES_DIR)/.dnsmasq-$(DNSMASQ_VERSION): $(DL_DIR)/$(DNSMASQ_PKG_SOURCE)
-	@tar -C $(PACKAGES_DIR) --exclude .svn -xjf $(DL_DIR)/$(DNSMASQ_PKG_SOURCE)
+	@tar -C $(PACKAGES_DIR) -xjf $(DL_DIR)/$(DNSMASQ_PKG_SOURCE)
 	@touch $@
 
 dnsmasq: $(PACKAGES_DIR)/.dnsmasq-$(DNSMASQ_VERSION)
 
 dnsmasq-package: $(PACKAGES_DIR)/.dnsmasq-$(DNSMASQ_VERSION)
-	tar -C $(PACKAGES_DIR) $(VERBOSE) -cjf $(PACKAGES_BUILD_DIR)/$(DNSMASQ_PKG_SOURCE) dnsmasq-$(DNSMASQ_VERSION)
+	tar -C $(PACKAGES_DIR) $(VERBOSE) --exclude .svn -cjf $(PACKAGES_BUILD_DIR)/$(DNSMASQ_PKG_SOURCE) dnsmasq-$(DNSMASQ_VERSION)
 
 dnsmasq-precompiled: $(DNSMASQ_DIR)/$(DNSMASQ_TARGET_BINARY) dnsmasq
 	$(TARGET_STRIP) $(DNSMASQ_DIR)/$(DNSMASQ_TARGET_BINARY)
